14_02_2025 ACTUALZIAR APELLIDO USUARIO  CORREGIDO

--- a/src/app/Ui/Modules/configuration/Usuarios/page/actualizar-usuario-page/actualizar-usuario-page.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/page/actualizar-usuario-page/actualizar-usuario-page.component.html
@@ -98,7 +98,7 @@
               <div class="sm:flex">
                 <input
                   [(ngModel)]="usuario.apellido"
-                  formControlName="apellidoUsuario"
+                  formControlName="apellido"
                   [value]="datosUsuario.apellido"
                   id="af-account-phone"
                   type="text"
