14_02_2025 DISENO OPCIONES CARGA INVENTARIO MEJORADO

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@
   --color-principal-3: #00D1AE;
   --color-principal-4: #F0F0F0;
   --color-principal-5: #888888;
-  --color-principal-6: #E10000
+  --color-principal-6: #E10000;
 
 }
 
