--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.css
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.css
@@ -19,3 +19,26 @@ table th {
 .container .mat-mdc-form-field-subscript-wrapper {
   display: none;
 }
+
+.button-option {
+  width: 100%;
+  background-color: #F0F0F0;
+}
+
+.container-matmenu{
+  padding: .5rem;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: .3rem;
+}
+
+.container-matmenu h3 {
+  margin-bottom: 0;
+  color: #0158DD;
+}
+
+.container-matmenu hr {
+  margin-bottom: .5rem;
+}
+
