--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -1,6 +1,6 @@
-  <!-- =================================================================================== -->
-  <!-- Apartado filtros -->
-  <!-- =================================================================================== -->
+<!-- =================================================================================== -->
+<!-- Apartado filtros -->
+<!-- =================================================================================== -->
 <div class="container">
   <mat-form-field class="w-[20rem]">
     <mat-label>Buscar inventario</mat-label>
@@ -23,8 +23,7 @@
       <button class="px-6 py-3 flex gap-2 align-center">
         <img src="../../../../../../assets/svg/icon_excel.svg" alt="" />
         <span class="text-sm text-gray-600 dark:text-neutral-400">
-          {{ row.descripcion.toUpperCase()}}
-
+          {{ row.descripcion.toUpperCase() }}
         </span>
       </button>
     </td>
@@ -36,8 +35,8 @@
   <ng-container matColumnDef="usuariocreacion">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Usuario creador</th>
     <td mat-cell *matCellDef="let row">
-      <button class="px-6 py-3 flex gap-2 align-center">
-        <img src="../../../../../../assets/svg/icon-users.svg" alt="" />
+      <button class="usuariocreador" class="px-6 py-3 flex gap-2 align-center">
+        <mat-icon >person</mat-icon>
         <span class="text-sm text-gray-600 dark:text-neutral-400">
           {{ row.usuariocreacion.toUpperCase() }}
         </span>
@@ -78,15 +77,16 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Asignación</th>
     <td mat-cell *matCellDef="let row">
       <mat-menu #menu="matMenu">
-        <agregar-producto />
-        <hr />
-        <opcion-table-asignar-usuario
-          [idcarga]="row.idcarga"
+        <div class="container-matmenu">
+          <h3>Opciones</h3>
+          <hr>
+          <button-producto  class="w-full"/>
+          <button-asignar  class="w-full" [idcarga]="row.idcarga"
           [rucempresa]="row.rucempresa"
           (obtenerDetalle)="
             ObtenerDetatosInventarios($event.rucempresa, $event.idcarga)
-          "
-        />
+          "/>
+        </div>
       </mat-menu>
 
       <button mat-button [matMenuTriggerFor]="menu">
@@ -106,7 +106,6 @@
   [pageSizeOptions]="[5, 10, 25, 100]"
   aria-label="Select page of users"
 />
-
 
 <!-- =================================================================================== -->
 <!-- DETALLE INVENTARIO -->
