14_02_2025 DISENO OPCIONES CARGA INVENTARIO MEJORADO 1

--- a/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-asignar/button-asignar.component.css
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-asignar/button-asignar.component.css
@@ -1,6 +1,6 @@
 button {
   width: 100%;
-  background-color: rgba(0, 209, 174, .1);
+  background-color:  rgb(245, 245, 245);
   border-radius: 10px;
 }
 
