--- a/src/app/Ui/Modules/Carga_Inventario/Page/preview-carga-inventarios/preview-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/preview-carga-inventarios/preview-carga-inventarios.component.html
@@ -55,10 +55,10 @@
             </th>
           </tr>
         </thead>
-        <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
+        <tbody class="divide-y divide-gray-200 ">
           @for (item of excelData; track $index)
           {
-            <tr class="hover:bg-gray-50 dark:hover:bg-neutral-800">
+            <tr class="hover:bg-gray-50">
               <td class="px-6 py-1.5 whitespace-nowrap text-sm text-gray-900 ">
                 {{ item.almacen }}
               </td>
