15_02_2025 ADD ANULACIÓN DE INVENTARIO

--- a/src/app/Ui/Shared/feactures/cargarInventario/table-carga/td-estado-carga-inventario/td-estado-carga-inventario.component.html
+++ b/src/app/Ui/Shared/feactures/cargarInventario/table-carga/td-estado-carga-inventario/td-estado-carga-inventario.component.html
@@ -2,8 +2,8 @@
   @if (estado == "1") {
   <td-estado-1 />
   } @if (estado == "2") {
-  <td-estado-2 />
-  } @if (estado == "3") {
+  <td-estado-2  [estado]="estado2"/>
+  } @if (estado == "0") {
   <td-estado-3 />
   }
 </div>
