--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -36,7 +36,7 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Usuario creador</th>
     <td mat-cell *matCellDef="let row">
       <button class="usuariocreador" class="px-6 py-3 flex gap-2 align-center">
-        <mat-icon >person</mat-icon>
+        <mat-icon>person</mat-icon>
         <span class="text-sm text-gray-600 dark:text-neutral-400">
           {{ row.usuariocreacion.toUpperCase() }}
         </span>
@@ -50,7 +50,7 @@
   <ng-container matColumnDef="estado">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
     <td mat-cell *matCellDef="let row">
-      <td-estado-carga-inventario [estado]="row.estado" />
+      <td-estado-carga-inventario [estado2]="'Inventariado'" [estado]="row.estado" />
     </td>
   </ng-container>
 
@@ -79,13 +79,23 @@
       <mat-menu #menu="matMenu">
         <div class="container-matmenu">
           <h3>Opciones</h3>
-          <hr>
+          <hr />
           <button-producto />
-          <button-asignar  [idcarga]="row.idcarga"
-          [rucempresa]="row.rucempresa"
-          (obtenerDetalle)="
-            ObtenerDetatosInventarios($event.rucempresa, $event.idcarga)
-          "/>
+          <button-asignar
+            [idcarga]="row.idcarga"
+            [rucempresa]="row.rucempresa"
+            (obtenerDetalle)="
+              ObtenerDetatosInventarios($event.rucempresa, $event.idcarga)
+            "
+          />
+          <button-anular-inventario
+            [idcarga]="row.idcarga"
+            [rucempresa]="row.rucempresa"
+            (obtenerDetalle)="
+              ObtenerDatosAnularInventario($event.rucempresa, $event.idcarga)
+            "
+            [datosInventario]="datosInventario"
+          />
         </div>
       </mat-menu>
 
