15_02_2025 ADD VALIDACIÓN BUTTONS CARGA INVENTARIOS

--- a/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-producto/button-producto.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-producto/button-producto.component.html
@@ -5,6 +5,7 @@ class="w-full"
   aria-controls="newProducts"
   mat-fab
   extended
+  (click)=" ObtenerDetatosInventarios()"
 >
   <mat-icon>category</mat-icon>
   Productos
