--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -50,10 +50,13 @@
   <ng-container matColumnDef="estado">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
     <td mat-cell *matCellDef="let row">
-      <td-estado-carga-inventario
-        [estado2]="'Inventariado'"
-        [estado]="row.estado"
-      />
+      @if (row.estado == "1") {
+        <td-estado-1 />
+        } @if (row.estado == "2") {
+        <td-estado-2 estado="'Inventariado'" />
+        } @if (row.estado == "0") {
+        <td-estado-3 [estado]="'Anulado'" />
+        }
     </td>
   </ng-container>
 
@@ -83,16 +86,9 @@
         <div class="container-matmenu">
           <h3>Opciones</h3>
           <hr />
-          @if (row.estado == '0') {
-            Inventario anulado
-          }
-
-          @if (row.estado == '2') {
-            Inventario culminado
-          }
-
-          @if (row.estado == '1') {
-            <button-producto
+          @if (row.estado == '0') { Inventario anulado } @if (row.estado == '2')
+          { Inventario culminado } @if (row.estado == '1') {
+          <button-producto
             [idcarga]="row.idcarga"
             [rucempresa]="row.rucempresa"
             (obtenerDetalle)="
@@ -115,7 +111,6 @@
             [datosInventario]="datosInventario"
           />
           }
-
         </div>
       </mat-menu>
 
