--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -2,6 +2,31 @@
 <!-- Apartado filtros -->
 <!-- =================================================================================== -->
 <div class="container">
+  <mat-form-field>
+    <mat-label>Filtro Empresas</mat-label>
+    <mat-select [(value)]="selectedEmpresa" (selectionChange)="emitirFiltros()">
+      <mat-option value="">Todas</mat-option>
+      @for (item of DatosEmpresas; track $index) {
+        <mat-option [value]="item.rucempresa">
+          <mat-list-item>
+            <div matListItemTitle>{{ item.rucempresa || 'Sin RUC' }}</div>
+            <div matListItemLine>{{ item.razonsocial || 'Sin razón social' }}</div>
+          </mat-list-item>
+        </mat-option>
+        <hr>
+      }
+    </mat-select>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Filtro Estados</mat-label>
+    <mat-select [(value)]="selected" (selectionChange)="emitirFiltros()">
+      @for (item of filtroEstados; track $index) {
+        <mat-option [value]="item.value">{{ item.viewValue }}</mat-option>
+      }
+    </mat-select>
+  </mat-form-field>
+
   <mat-form-field class="w-[20rem]">
     <mat-label>Buscar inventario</mat-label>
     <input
@@ -12,6 +37,7 @@
     />
   </mat-form-field>
 </div>
+
 
 <table mat-table [dataSource]="dataSource" matSort>
   <!-- =================================================================================== -->
@@ -51,12 +77,12 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
     <td mat-cell *matCellDef="let row">
       @if (row.estado == "1") {
-        <td-estado-1 />
-        } @if (row.estado == "2") {
-        <td-estado-2 estado="'Inventariado'" />
-        } @if (row.estado == "0") {
-        <td-estado-3 [estado]="'Anulado'" />
-        }
+      <td-estado-1 />
+      } @if (row.estado == "2") {
+      <td-estado-2 estado="'Inventariado'" />
+      } @if (row.estado == "0") {
+      <td-estado-3 [estado]="'Anulado'" />
+      }
     </td>
   </ng-container>
 
@@ -80,7 +106,7 @@
   <!-- Asignación -->
   <!-- =================================================================================== -->
   <ng-container matColumnDef="asignacion">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Asignación</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Operaciones</th>
     <td mat-cell *matCellDef="let row">
       <mat-menu #menu="matMenu">
         <div class="container-matmenu">
