--- a/src/app/Ui/Modules/Carga_Inventario/Page/lista-carga-inventarios/lista-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/lista-carga-inventarios/lista-carga-inventarios.component.html
@@ -12,7 +12,10 @@
                   class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden dark:bg-neutral-900 dark:border-neutral-700"
                 >
                   <header-page />
-                  <lista-inventarios-cargados [dataListaInventarios]="datosInventarioslista" />
+                  <lista-inventarios-cargados
+                    [dataListaInventarios]="datosInventarioslista"
+                    (filtrosInventario)="aplicarFiltros($event)"
+                  />
                 </div>
               </div>
             </div>
