15_02_2025  REPORTE PDF ORGANIZADO EN TABS

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.css
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.css
@@ -53,7 +53,7 @@
 .container-datos-page {
   width: fit-content; /* Ajusta el ancho al contenido */
   min-width: 70.1875rem; /* Limita el ancho máximo */
-  height: auto; /* Ajusta la altura automáticamente según el contenido */
+  height: 70vh;
   display: flex;
   flex-direction: column;
   background-color: white;
