--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.css
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.css
@@ -1,5 +1,5 @@
 .ancho {
-  width: 75rem;
+  width: 100rem;
 }
 
 
@@ -82,6 +82,7 @@
 }
 
 .container-datos {
+  height: 100%;
   padding: 0 1rem;
   box-sizing: border-box;
 }
@@ -133,17 +134,6 @@
   font-size: .8rem;
 }
 
-.container-datos-page {
-  width:  70.1875rem;
-  height: 49.625rem;
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-  box-shadow: 10px 10px 15px rgba(197, 197, 197, 0.5);
-  position: relative;
-  flex-shrink: 0;
-  padding: 1rem;
-}
 
 .container-datos {
   display: flex;
