--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -11,10 +11,10 @@
       aria-labelledby="hs-header-base-collapse"
     >
       <div
-        class="overflow-hidden overflow-y-auto max-h-[75vh] [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300"
+        class="overflow-hidden"
       >
         <div
-          class="py-2 md:py-0 flex flex-col md:flex-row md:items-center gap-0.5 md:gap-1"
+          class="py-0 md:py-0 flex flex-col md:flex-row md:items-center gap-0.5 md:gap-1"
         >
           <div class="grow">
             <div
