--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -1,6 +1,6 @@
 <div class="w-full">
   <div class="w-full lg:ps-0 bg-fondo-datos">
-    <div class="p-4 sm:p-6 space-y-4 sm:space-y-6">
+    <div class="px-4 py-0 sm:p-6 space-y-4 sm:space-y-6">
       <section>
         <div class="max-w-[95rem] py-10 lg:py-4 mx-auto">
           <div class="flex flex-col">
@@ -16,8 +16,8 @@
                   <!-- =================================================================================== -->
                   <!-- Apartado filtros -->
                   <!-- =================================================================================== -->
-                  <!-- <div class="container">
-  <mat-form-field>
+                  <div class="container">
+                    <!-- <mat-form-field>
     <mat-label>Filtro Empresas</mat-label>
     <mat-select [(value)]="selectedEmpresa" (selectionChange)="emitirFiltros()">
       <mat-option value="">Todas</mat-option>
@@ -40,18 +40,18 @@
         <mat-option [value]="item.value">{{ item.viewValue }}</mat-option>
       }
     </mat-select>
-  </mat-form-field>
+  </mat-form-field> -->
 
-  <mat-form-field class="w-[20rem]">
-    <mat-label>Buscar inventario</mat-label>
-    <input
-      matInput
-      (keyup)="applyFilter($event)"
-      placeholder="Ingresar descripción"
-      #input
-    />
-  </mat-form-field>
-</div> -->
+                    <mat-form-field class="w-[20rem]">
+                      <mat-label>Buscar inventario</mat-label>
+                      <input
+                        matInput
+                        (keyup)="applyFilter($event)"
+                        placeholder="Ingresar descripción"
+                        #input
+                      />
+                    </mat-form-field>
+                  </div>
 
                   <table mat-table [dataSource]="dataSource" matSort>
                     <!-- =================================================================================== -->
