16_02_2025 CORRECION data reporte pdf en el detalle

--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -134,7 +134,7 @@
                             <button
                               class="btn btn-secondary w-full"
                               (click)="
-                                inventarioSeleccionado(
+                                inventarioSeleccionadoPDF(
                                   row.rucempresa,
                                   row.idcarga
                                 )
