17_02_2025  MEJORA MENU DE OPCIONES EN USUARIOS

--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.css
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.css
@@ -43,3 +43,30 @@ table  th  {
 .container .mat-mdc-form-field-subscript-wrapper {
   display: none;
 }
+
+
+.container-matmenu{
+  padding: .5rem;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: .3rem;
+}
+
+.container-matmenu h3 {
+  margin-bottom: 0;
+  color: #0158DD;
+}
+
+.container-matmenu hr {
+  margin-bottom: .5rem;
+}
+
+button {
+  background-color: rgb(245, 245, 245);
+  border-radius: 10px;
+}
+
+button  mat-icon {
+  color: #20477E;
+}
