--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
@@ -98,15 +98,22 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
       <td mat-cell *matCellDef="let row">
         <mat-menu #menu="matMenu">
-          <button
-            (click)="ObtenerDetalleUsuario(row.idusuario)"
-            type="button"
-            class="btn"
-            data-bs-toggle="modal"
-            data-bs-target="#modalActualizarUsuario"
-          >
-            Actualizar
-          </button>
+          <div class="container-matmenu">
+            <h3>Opciones</h3>
+            <hr />
+            <button
+              mat-fab
+              extended
+              (click)="ObtenerDetalleUsuario(row.idusuario)"
+              type="button"
+              class="btn-actualizar"
+              data-bs-toggle="modal"
+              data-bs-target="#modalActualizarUsuario"
+            >
+              <mat-icon>category</mat-icon>
+              Actualizar
+            </button>
+          </div>
         </mat-menu>
 
         <button mat-button [matMenuTriggerFor]="menu">
